--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "airtable": "^0.12.2",
     "auth0": "^4.8.0",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.21",
+    "marked": "^13.0.3",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "node-fetch": "^3.3.2",
