--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "stripe": "^16.6.0"
   },
   "devDependencies": {
