--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "marked": "^13.0.3",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "next-sitemap": "^4.2.3",
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
