--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "sparkloop": "^1.0.5",
     "stripe": "^16.6.0"
   },
   "devDependencies": {
